fixed alignment on small screens

--- a/static/styles.css
+++ b/static/styles.css
@@ -181,6 +181,10 @@ ul.blog-posts li a:visited {
 
 
 @media (max-width: 575.98px) {
+    .post-content > p {
+        text-align: start;
+    }
+
     .profile-content, .profile-extended {
         flex-direction: column;
         align-items: center;
